--- a/frontend/wxSearch/wxSearch.wxml
+++ b/frontend/wxSearch/wxSearch.wxml
@@ -4,7 +4,7 @@
 
         <view class="wxSearchMindKey">
             <view class="wxSearchMindKeyList">
-                <block wx:for="{{wxSearchData.mindKeys}}">
+                <block wx:key="{{wxSearchData.mindKeys}}">
                     <view class="wxSearchMindKeyItem" bindtap="wxSearchKeyTap" data-key="{{item}}">{{item}}</view>
                 </block>
             </view>
@@ -13,7 +13,7 @@
         <view class="wxSearchKey" style="display:{{wxSearchData.view.isShowSearchKey ? 'block':'none'}}">
             <text class="wxSearchTitle">热门搜索</text>
             <view class="wxSearchKeyList">
-                <block wx:for="{{wxSearchData.keys}}">
+                <block wx:key="{{wxSearchData.keys}}">
                     <view class="wxSearchKeyItem" bindtap="wxSearchKeyTap" data-key="{{item}}">{{item}}</view>
                 </block>
             </view>
